--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,8 +2,8 @@
 <IfModule mod_rewrite.c>
   Options -Multiviews
   RewriteEngine On
-  RewriteBase /ShipCruiseTour-brief6/public
-# si le file ou le dossier  est introuvable redirect
+  RewriteBase /BRIEF7/public
+
 # to index.php in public dans cette url:localhost/shareposts/public/:::::  
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteCond %{REQUEST_FILENAME} !-f
