--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,7 +4,9 @@
   RewriteEngine On
   RewriteBase /BRIEF7/public
 
-# to index.php in public dans cette url:localhost/shareposts/public/:::::  
+# to index.php in public dans cette url:localhost/shareposts/public/::::: 
+ # means that if the file with the specified name in the browser doesn’t exist,
+ #or the directory in the browser doesn’t exist then procede to the rewrite rule
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteRule  ^(.+)$ index.php?url=$1 [QSA,L]
