--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
 <IfModule mod_rewrite.c>
   RewriteEngine on
+  # redirect all to public index
   RewriteRule ^$ public/ [L]
   RewriteRule (.*) public/$1 [L]
 </IfModule>
